--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -3,5 +3,18 @@
 	"greeting": "Bonjour!",
 	"createHabit": {
 		"title": "Créer une nouvelle habitude"
+	},
+	"createAccount": {
+		"title": "Créer un compte",
+		"username": "Nom d'utilisateur",
+		"username_placeHolder": "User name",
+		"username_errors_message": "Nom d'utilisateur est requis",
+		"email": "Email",
+		"email_placeHolder": "email@example.com",
+		"email_errors_message": "Email est requis",
+		"password": "Mot de passe",
+		"password_placeHolder": "Password",
+		"password_errors_message": "Password est requis",
+		"btn": "Créer"
 	}
 }
