--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,7 +4,7 @@
 	"createHabit": {
 		"title": "Create a new habit"
 	},
-	"createAccount": {
+	"createUser": {
 		"title": "Create a new account",
 		"username": "User name",
 		"username_placeHolder": "User name",
@@ -17,7 +17,7 @@
 		"password_errors_message": "Password is required",
 		"btn": "Create"
 	},
-	"accountAuthentificate": {
+	"userAuthenticate": {
 		"title": "Sign up"
 	}
 }
