--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -4,7 +4,7 @@
 	"createHabit": {
 		"title": "Créer une nouvelle habitude"
 	},
-	"createAccount": {
+	"createUser": {
 		"title": "Créer un compte",
 		"username": "Nom d'utilisateur",
 		"username_placeHolder": "User name",
@@ -17,7 +17,7 @@
 		"password_errors_message": "Password est requis",
 		"btn": "Créer"
 	},
-	"accountAuthentificate": {
+	"userAuthenticate": {
 		"title": "Se connecter"
 	}
 }
