feat: refactor nommage (16)

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,8 +1,16 @@
 {
 	"welcome": "Welcome to our app!",
 	"greeting": "Hello!",
-	"createHabit": {
-		"title": "Create a new habit"
+	"createActivity": {
+		"title": "Create a new activity",
+		"activityName": "Nom",
+		"activityName_placeHolder": "Ajouter un titre",
+		"activityName_errors_message": "Nom d'activité est requis",
+		"description": "Description",
+		"description_placeHolder": "Ajouter une description",
+		"description_errors_message": "Description max",
+		"btn": "Créer",
+		"category": "Etiquettes"
 	},
 	"createUser": {
 		"title": "Create a new account",
