--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -1,8 +1,16 @@
 {
 	"welcome": "Bienvenue dans notre application!",
 	"greeting": "Bonjour!",
-	"createHabit": {
-		"title": "Créer une nouvelle habitude"
+	"createActivity": {
+		"title": "Créer une nouvelle activité",
+		"activityName": "Nom",
+		"activityName_placeHolder": "Ajouter un titre",
+		"activityName_errors_message": "Nom d'activité est requis",
+		"description": "Description",
+		"description_placeHolder": "Ajouter une description",
+		"description_errors_message": "Description max",
+		"btn": "Créer",
+		"category": "Etiquettes"
 	},
 	"createUser": {
 		"title": "Créer un compte",
