feat: update un activity

--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -1,6 +1,6 @@
 {
 	"activity": {
-		"btn-add": "Ajouter",
+		"btn-add": "Ajouter une nouvelle activité",
 		"list": {
 			"title": "List activités",
 			"title_follow": "Suivi des activités selon la date"
