--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -62,7 +62,8 @@
 			"title": "Mot de passe",
 			"placeholder": "Entrez votre mot de passe",
 			"errors_message": "Le mot de passe est requis",
-			"minLength_message": "Le mot de passe doit comporter au moins 6 caractères."
+			"invalid_message": "Veuillez choisir un mot de passe contenant au moins 8 caractères, dont une majuscule, une minuscule, un chiffre et un caractère spécial (@$!%*?&).",
+			"incorrect": "Mot de passe incorrect"
 		}
 	}
 }
