feat: refactor get patch delete activity service

--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -39,7 +39,8 @@
 			"title": "Créer un compte",
 			"btn": "Créer",
 			"alert.success": "Merci! Votre compte a été créé avec succès",
-			"alert.error": "Une erreur est survenue lors de la création du compte. Veuillez réessayer."
+			"server.error": "Une erreur est survenue. Veuillez réessayer plus tard.",
+			"email_already_exists": "Cette adresse e-mail est déjà utilisée!"
 		},
 		"userAuthenticate": {
 			"title": "Connexion",
