--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -46,7 +46,8 @@
       "input_name": {
         "title": "Title",
         "placeholder": "Add a title",
-        "errors_message": "Activity name is required"
+        "errors_message": "Activity name is required",
+        "error_maxLength": "Activity name must not exceed 200 characters"
       },
       "description": {
         "title": "Description",
@@ -91,14 +92,16 @@
       "title": "Email",
       "placeholder": "email@example.com",
       "errors_message": "Email is required",
-      "invalid_message": "The email address is not valid. Please enter a correct address."
+      "invalid_message": "The email address is not valid. Please enter a correct address.",
+      "maxLength_message": "Email address must not exceed 340 characters."
     },
     "password": {
       "title": "Password",
       "placeholder": "Enter your password",
       "errors_message": "Password is required",
       "invalid_message": "Please choose a password containing at least 8 characters, including an uppercase letter, a lowercase letter, a digit, and a special character (@$!%*?&)",
-      "incorrect": "Incorrect password"
+      "incorrect": "Incorrect password",
+      "maxLength_message": "Password must not exceed 255 characters."
     }
   }
 }
